--- a/home.css
+++ b/home.css
@@ -1,9 +1,10 @@
 .item1 { grid-area: header; }
-.item2 { grid-area: tl; }
-.item3 { grid-area: tr; }
-.item4 { grid-area: bl; }
-.item5 { grid-area: br; }
-.item6 { grid-area: footer; }
+.item2 { grid-area: intro; }
+.item3 { grid-area: ab; }
+.item4 { grid-area: proj; }
+.item5 { grid-area: exp; }
+.item6 { grid-area: con; }
+.item7 { grid-area: footer; }
 
 .page {
   background-color: #455772;
@@ -12,41 +13,64 @@
 .grid-container {
   display: grid;
   grid-template-areas:
-    'header header'
-    'tl tr'
-    'bl br'
-    'footer footer';
+    'header header header'
+    'intro intro ab'
+    'proj exp con'
+    'footer footer footer';
   grid-gap: 10px;
   padding: 10px;
-  grid-auto-columns: 50%;
+  grid-auto-columns: 33%;
 }
 
 .grid-container > div {
   background-color: white;
-  border: 1px solid gray;
   color: #455772;
+}
+
+ul {
+  list-style-type: circle;
+  margin: 0;
+  padding: 0px 20px;
+  font-style: italic;
+}
+
+a {
+  color: #455772;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
 }
 
 .header {
   padding: 20px 20px;
+  border: 1px solid gray;
+  /* border: none; */
+  /* border-radius: 8px; */
+  /* background: rgb(255,255,255); */
+  /* background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 25%, rgba(69,87,114,1) 100%); */
 }
 
 .footer {
   padding: 20px 0px;
   font-size: 14px;
   text-align: center;
+  border: 1px solid gray;
 }
 
 .intro-card {
-  padding: 40px 20px;
+  padding: 40px 40px;
   font-size: 16px;
   text-align: left;
+  border: 1px solid gray;
 }
 
 .nav-cards {
   padding: 80px 0px;
   font-size: 24px;
   text-align: center;
+  border: 1px solid gray;
 }
 
 .nav-cards:hover {
