--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ img {
   /* text-align: center; */
   border-radius: 4px;
   background-color: white;
-  color: rgb(71, 109, 94);
+  color: #476d5e;
 }
 
 .section-title {
