--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ footer {
   text-align: center;
   padding: 28px 0;
   background-color: white;
-  color: rgb(71, 109, 94);
+  color: gray;
 }
 
 img {
