--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ img {
   color: white;
 }
 
+/* TODO: extract animations into a separate file */
 @keyframes words {
   0% {content: "H";}
   4% {content: "He";}
@@ -66,22 +67,32 @@ img {
   96% {content: "Hello, my name is Adrienne";}
   100% {content: "Hello, my name is Adrienne.";}
 }
-
 @keyframes cursor {
   0% {content: "";}
   50% {content: "|";}
   100% {content: "";}
 }
 .words::before {
-  animation: words 1s linear 0s 1 normal forwards;
+  /* name, duration, timing-function, delay, iteration-count, direction, fill-mode */
+  animation: words 2.5s linear 0.1s 1 normal forwards;
   content: "";
+  animation-iteration-count: 1;
 }
+/* .words::after {
+  animation: cursor 0.6s linear 2.6s 1 normal forwards;
+  content: "|"; 
+} */
 
 .accessibility {
   width: 0; 
   display: inline-block; 
   overflow: hidden; 
   white-space: nowrap;
+}
+@media (prefers-reduced-motion) {
+  .words::before {
+    content: "Hello, my name is Adrienne."
+  }
 }
 
 
@@ -110,7 +121,7 @@ img {
 
 .navbar a {
   display: inline-block;
-  vertical-align: middle; /* align text in middle of nav vertically */
+  vertical-align: middle;
   padding: 41px 20px;
   /* width: 8%; */
   text-decoration: none;
@@ -159,6 +170,7 @@ img {
 }
 
 .section-title {
+  /* needs a strong font */
   padding: 16px;
   border: 1px solid rgb(71, 109, 94);
   border-radius: 4px;
