--- a/index.css
+++ b/index.css
@@ -175,7 +175,9 @@ img {
 }
 
 form {
-  margin: 8px 64px;
+  margin: 8px auto;
+  width: 100%;
+  max-width: 564px;
 }
 
 input, select, textarea {
@@ -191,8 +193,8 @@ input, select, textarea {
 } */
 
 .submit-button {
-  width: 20%;
-  padding: 8px 16px;
+  width: auto;
+  padding: 12px 16px;
   background-color: gray;
   color: white;
   border: none;
@@ -203,11 +205,20 @@ input, select, textarea {
   background-color: rgb(71, 109, 94);
 }
 
+
+
 @media (max-width: 600px) {
   form { 
-    margin: 8px 0;
+    width: 80%;
   }
   .submit-button {
     width: 100%;
+  }
+}
+
+@media (max-width: 900px) {
+  form {
+    width: 80%;
+    max-width: 564px;
   }
 }
