--- a/index.css
+++ b/index.css
@@ -1,225 +1,55 @@
 body, html {
   margin: 0px;
   padding: 0px;
-  height: 100%;  /* for background image above navigation */
-  background-color: #476d5e;
-}
-
-a {
-  text-decoration: none;
-}
-
-footer {
-  text-align: center;
-  padding: 1rem 0;
-  background-color: white;
-  color: lightgray;
-}
-
-.footer-statement {
-  margin: 0.5rem auto;
-  width: 80%;
-}
-
-.footer-icons {
-  margin: 0 0.75rem 0.5rem 0;
-  text-align: right;
-}
-
-.footer-icons img {
-  opacity: 0.5;
-}
-
-.footer-icons img:hover {
-  opacity: 1;
-}
-
-img {
-  margin: 0.2rem;
-  vertical-align: middle;
-}
-
-.bg {
-  background-image: 
-    linear-gradient( rgba(0,0,0,0.5), rgba(0,0,0,0.5) ), 
-    url("naseer-unsplash-small.jpg");
-  height: 50%;
+  height: 100%;
+  background-image: url("images/naseer-unsplash.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.bg span {
-  font-family: monospace;
-  font-size: 2rem;
+h1 {
+  margin: 0px auto;
+  padding: 2em 1em 1.5em;
+}
+
+p {
+  padding: 2em;
+}
+
+button {
+  padding: 0.5em;
+  width: 150px;
+  border: 1px solid rgba(52, 83, 74, 0.6);
+  border-radius: 20px;
+  display: block;
+}
+
+button:hover {
   color: white;
-}
-
-.navbar {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  background-color: white;
-}
-
-.navbar ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.navbar li {
-  display: inline;
-}
-
-.navbar a {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 4px 0;
-  width: 6.5rem;
-  position: relative;
-  color: black;
-  text-decoration: none;
-  text-transform: uppercase;
-  opacity: 0.5;
-}
-
-.navbar a:hover {
-  opacity: 1;
-}
-
-.navbar-icon {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0;
-  padding: 2px;
-}
-
-/* TODO: change to use min-width instead */
-/* FIXME: fix mobile link highlighting */
-/* TODO: improve the appearance of mobile navigation */
-@media (max-width: 600px) {
-  .navbar ul {
-    display: block;
-  }
-  .navbar a {
-    float: none;
-    padding: 10px 0;
-    width: 100%;
-  }
-  .navbar-icon {
-    display: none;
-  }
-}
-
-.card {
-  margin: 16px auto;
-  padding: 24px;
-  width: 80%;
-  border-radius: 4px;
-  background-color: white;
-  color: #29423B;
-}
-
-.section-title {
-  padding: 16px;
-  border-top: 0.5px solid #e9afa3;
-  border-bottom: 0.5px solid #e9afa3;
-  /* border-radius: 8px; */
-}
-
-.project-title {
-  text-align: center;
-  margin: 32px 16px 0px;
-}
-
-.project-title a {
-  color: #29423B;
-}
-
-.project-title a:hover {
-  color: #e9afa3;
-  
-}
-
-.project-row {
-  display: flex;
-}
-
-.project-left {
-  flex: 75%;
-  margin: 0 10px;
-}
-
-.project-right {
-  flex: 25%;
-  margin: 16px 10px;
-  padding: 0 1rem;
-  border-left: 1px solid lightgray;
-}
-
-.exp-item {
-  margin: 32px 10px 0;
-}
-
-.exp-title {
-  margin: 8px 0;
-}
-
-form {
-  margin: 8px auto;
-  width: 100%;
-  max-width: 564px;
-}
-
-input, select, textarea {
-  box-sizing: border-box;
-  width: 100%;
-  margin: 8px 0 18px 0;
-  padding: 4px;
-  outline: none;
-}
-
-/* TODO: add input fields focus */
-/* input:focus, select:focus, textarea:focus {
-
-} */
-
-.submit-button {
-  width: auto;
-  padding: 12px 16px;
-  background-color: gray;
-  color: white;
-  border: none;
-  border-radius: 4px;
-}
-
-.submit-button:hover {
-  background-color: rgb(71, 109, 94);
-  cursor: pointer;
-}
-
-@media (max-width: 600px) {
-  form { 
-    width: 80%;
-  }
-  .submit-button {
-    width: 100%;
-  }
-}
-
-@media (max-width: 900px) {
-  form {
-    width: 80%;
-    max-width: 564px;
-  }
+  border: 1px solid rgba(52, 83, 74, 0);
+  background-color: rgba(52, 83, 74, 0.6);
 }
 
 .center {
   text-align: center;
-  width: 100%;
-  margin: 0 auto;
+  margin: 0px auto;
+}
+
+.main-content {
+  height: 100%;
+  width: 50%;
+  min-width: 400px;
+  max-width: 600px;
+  background-color: rgb(255, 255, 255, 0.8);
+}
+
+.divider {
+  margin: auto;
+  width: 20%;
+  border-top: 1px solid gray;
+}
+
+.links {
+  margin: 0.5em auto;
 }
