--- a/index.css
+++ b/index.css
@@ -2,33 +2,51 @@ body, html {
   margin: 0px;
   padding: 0px;
   height: 100%;
-  background-image: url("images/naseer-unsplash.jpg");
+  background-image: url("images/griesbeck-unsplash.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 h1 {
+  color: rgb(37, 50, 59);
   margin: 0px auto;
-  padding: 2em 1em 1.5em;
+  padding: 2em 1em 0.25em;
+  font-family: 'Bebas Neue', cursive;
+  /* font-size: 72px; */
+  font-size: 3.5em;
+  letter-spacing: 10px;
+}
+
+h2  {
+  color: rgb(37, 50, 59, 0.7);
+  padding: 0.25em 1em 1em;
+  font-family: 'Inconsolata', monospace;
+  font-size: 1.5em;
 }
 
 p {
-  padding: 2em;
+  color: rgb(37, 50, 59, 0.7);
+  padding: 1.5em 2.5em;
+  font-family: 'Prompt', sans-serif;
 }
 
-button {
-  padding: 0.5em;
-  width: 150px;
-  border: 1px solid rgba(52, 83, 74, 0.6);
-  border-radius: 20px;
-  display: block;
+/* font awesome icons */
+.fa-regular, .fa-brands {
+  color: rgb(189, 183, 187);
+  margin: 0.25em;
+  padding: 0.75em;
+  font-size: 25px;
+  width: 25px;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid rgb(189, 183, 187);;
+  border-radius: 50%;
 }
 
-button:hover {
-  color: white;
-  border: 1px solid rgba(52, 83, 74, 0);
-  background-color: rgba(52, 83, 74, 0.6);
+.fa-regular:hover, .fa-brands:hover {
+  color: rgb(37, 50, 59, 0.9);
+  border: 1px solid rgb(37, 50, 59, 0.9);
 }
 
 .center {
@@ -41,13 +59,18 @@ button:hover {
   width: 50%;
   min-width: 400px;
   max-width: 600px;
-  background-color: rgb(255, 255, 255, 0.8);
+  background-color: rgb(255, 255, 255, 0.9);
+  /* background-color: rgba(59, 56, 56, 0.95); */
+  box-sizing: border-box;
+  border-left: 3px solid;
+  border-right: 3px solid;
+  border-image: linear-gradient(rgb(37, 50, 59, 0.9), 25%, rgb(255, 255, 255, 0.9)) 1;
 }
 
 .divider {
   margin: auto;
   width: 20%;
-  border-top: 1px solid gray;
+  border-top: 1px solid rgb(37, 50, 59, 0.4);
 }
 
 .links {
