--- a/index.css
+++ b/index.css
@@ -12,23 +12,32 @@ html {
 h1 {
   color: rgb(37, 50, 59);
   margin: 0px auto;
-  padding: 2em 1em 0.25em;
+  padding: 1.25em 0.75em 0.25em;
   font-family: "Bebas Neue", cursive;
-  /* font-size: 72px; */
   font-size: 3.5em;
   letter-spacing: 10px;
 }
 
-h2 {
+h2, h3 {
   color: rgb(37, 50, 59, 0.7);
-  padding: 0.25em 1em 1em;
   font-family: "Inconsolata", monospace;
+}
+
+h2 {
+  padding: 0em 1em 0em;
   font-size: 1.5em;
+}
+
+h4 {
+  margin: 0;
+  padding: 1em 1em 0.75em 2em;
+  color: rgb(37, 50, 59, 0.7);
+  font-family: "Prompt", sans-serif;
 }
 
 p {
   color: rgb(37, 50, 59, 0.7);
-  padding: 1.5em 2.5em;
+  padding: 0 1em;
   font-family: "Prompt", sans-serif;
 }
 
@@ -37,12 +46,29 @@ a {
   border: none;
 }
 
+.icons-container {
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
+/* devicon icons */
+.devicon {
+  font-size: 36px;
+  padding: 0.25em;
+  color: rgb(37, 50, 59, 0.9);
+}
+
+.devicon:hover {
+  color: rgb(9, 58, 93);
+  cursor: pointer;
+}
+
 /* font awesome icons */
 .fa-regular,
 .fa-brands {
   color: rgb(189, 183, 187);
   margin: 0.25em;
-  padding: 0.75em;
+  padding: 0.6em;
   font-size: 25px;
   width: 25px;
   text-align: center;
@@ -68,7 +94,6 @@ a {
   min-width: 400px;
   max-width: 600px;
   background-color: rgb(255, 255, 255, 0.9);
-  /* background-color: rgba(59, 56, 56, 0.95); */
   box-sizing: border-box;
   border-left: 3px solid;
   border-right: 3px solid;
@@ -82,7 +107,7 @@ a {
 
 .divider {
   margin: auto;
-  width: 20%;
+  width: 60%;
   border-top: 1px solid rgb(37, 50, 59, 0.4);
 }
 
